--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="{{url_for('static'), filename='main.css'}}">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='main.css')}}">
 
     {% if title %}
     <title>OpenLIBS - {{title}}</title>
