--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,17 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='main.css')}}">
 
-    {% if title %}
-    <title>OpenLIBS - {{title}}</title>
-    {% else %}
-    <title>OpenLIBS</title>
-    {% endif %}
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='main.css')}}">
+  <link rel="shortcut icon" href="{{ url_for('static', filename='/media/openlibsicon.svg') }}">
+
+  {% if title %}
+  <title>OpenLIBS - {{title}}</title>
+  {% else %}
+  <title>OpenLIBS</title>
+  {% endif %}
+  <style>
+    .main-section-1 {
+      background-image: url('{{ url_for('static', filename='/media/Cu02.jpg') }}');
+      background-size: 100% 100%;
+    }
+  </style>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.3.3/chart.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.3.3/chart.js"
+    integrity="sha512-F4BEJjzO7gmh8s7E9L63CdmC2NPdU8jBLJanZDJcSQC+t2vA+fELwQLRHzqsOlgHFD5FCCo/EPWvNxmcV4JjUw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 </head>
+</head>
+
 <body>
-{% block content %}{% endblock content %}
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
+    integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+    crossorigin="anonymous"></script>
+  <header class="">
+    <nav class="navbar navbar-fixed-top navbar-expand-lg navbar-light" style="background-color: rgb(191, 237, 252)">
+      <div class="container-fluid">
+        <img class='favic' src="{{url_for('static', filename='/media/openlibsicon.svg')}}" alt="icon">
+        <a class="navbar-brand" href="#">openLIBS</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse mybg-cyan" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto me-auto mb-2 mb-lg-0">
+            <!-- <li class="nav-item pe-5"><a style="background-color: rgba(173, 182, 184, .7) ; border-radius: 25px"
+                class="nav-link" href="{{ url_for('home') }}">HOME</a></li> -->
+            <li class="nav-item pe-5"><a class="nav-link" href="{{ url_for('home') }}">HOME</a></li>
+            <li class="nav-item pe-5"><a class="nav-link" href="{{ url_for('docs') }}">DOCS</a></li>
+            <li class="nav-item pe-5"><a class="nav-link" href="{{ url_for('docs') }}">GITHUB</a></li>
+            <li class="nav-item pe-5"><a class="nav-link" href="{{ url_for('about') }}">ABOUT</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  {% block content %}{% endblock content %}
+  <footer>
+    <div class="footer-flex">
+      footer section
+    </div>
+  </footer>
+  {% block JScript %}{% endblock JScript %}
 </body>
+
 </html>
