--- a/static/main.css
+++ b/static/main.css
@@ -12,11 +12,22 @@
   } */
 
 
-
+.section-2{
+    width: 100vw;
+    height: 100vh;
+    position: relative;
+}
 .section-2-btn {
-    margin: 2vh 5vw 7vh 10vw;
+    width: 12rem;
+    height: 2rem;
+    /* margin: 2vh 5vw 0vh 10vw; */
     border-radius: 2.8125rem;
     background: #D9D9D9;
+    margin-top: .2rem;
+    margin-left: 13rem;
+    font-size: 1rem;
+    text-align: center;
+    padding: .1rem;
 }
 
 .anchor {
@@ -33,63 +44,68 @@
 }
 
 .section-2-btn-next {
-    align-self: center;
-    margin: 0vh 35vw 0vh 35vw;
+    
+    margin-top: 0rem;
+    margin-left: 50rem;
     border-radius: 5rem;
     background: #D9D9D9;
-
     display: flex;
-    width: 27.4375rem;
-    height: 3.125rem;
-
+    width: 12rem;
+    height: 3rem;
     justify-content: center;
-
-
-
 }
 
+.graphContainer{
+    width:80rem;
+    height: 35rem;
+    margin-left: 10%;
+    margin-bottom: 0px;
+    border-radius: 5rem;
+    width:100%; 
+    max-width:600px; 
+    height:500px;  
+}
+/* style="width:100%; max-width:600px; height:500px;" */
+section5 {
+    background: rgb(5,9,44);
+    background: linear-gradient(45deg,rgba(6,77,143,1)  0%, rgba(6,47,99,1) 72%, rgba(5,9,44,1) 100%);
+}
+div[dir="ltr"] {
+    overflow: hidden;
+    }
+
+
+#form_file_input{
+    visibility: hidden;
+    width: 0px;
+    max-width: 0px;
+    height: 0px;
+    max-height: 0px;
+}
+#file{
+    visibility: hidden;
+    width: 0px;
+    max-width: 0px;
+    height: 0px;
+    max-height: 0px;
+}
 .periodic-table {
     display: grid;
     grid-template-columns: repeat(18, 1fr);
-    grid-gap: 5px;
-    max-width: 800px;
-    margin: 0 auto;
+    gap: 5px;
+    margin: 20px auto;
+    width: 80%;
 }
 
-/* Styling for individual elements */
 .element {
-    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #f5f5f5;
     border: 1px solid #ccc;
-    padding: 10px;
-    text-align: center;
+    border-radius: 5px;
+    height: 80px;
+    padding: 5px;
     font-size: 14px;
-}
-
-/* Styling for dimmed elements */
-.element input[type="radio"]:checked~label .element {
-    opacity: 0.25;
-}
-
-/* Styling for the bright effect when selected */
-.element input[type="radio"]:checked+label .element {
-    background-color: #bb3611;
-    /* Change this color as you like */
-}
-
-/* Hide the radio buttons */
-input[type="radio"] {
-    display: none;
-}
-
-label {
-    cursor: pointer;
-}
-
-footer {
-    background-color: rgb(215, 223, 112)(255, 204, 0);
-}
-
-table #H {
-    background-color: red;
-
 }
