--- a/templates/homed3.html
+++ b/templates/homed3.html
@@ -1,78 +1,141 @@
 {% extends "layout.html" %}
 {% block content%}
-
-
 <main class="mt-0 mb-0">
-
   <section class="main-section-1" style="height: 92vh; width: 95 vw;">
     <div class="pt-4">
       <h1 style="font-size:5vw" class="text-center text-light fw-bolder">LIBS ANALYZER</h1>
     </div>
-
     <div class="mt-3">
       <div class="d-flex  justify-content-evenly flex-row bd-highlight mb-3">
 
         <div class="p-2 bd-highlight"><img width="300vw" height="300vw"
             src="{{ url_for('static', filename='/media/Group11.jpg') }}" alt=""></div>
-        <!-- <h1> -->
-
         <div class="my-auto p-2 bd-highlight b"><a class="btn btn-lg btn-green fw-bold" href="#section-2">GET
             STARTED</a></div>
-        <!-- </h1> -->
         <div class="p-2 bd-highlight" id="my_p1"><img width="300vw" height="300vw"
             src="{{ url_for('static', filename='/media/Group12.jpg') }}" alt=""></div>
       </div>
     </div>
   </section>
 
-  <!-- <span class="anchor" id="section-2"></span> -->
+<section id="section-2" class="section-2" style="height: 92vh; width: 95 vw;">
+<form action="/" method="POST" enctype=multipart/form-data >
+  {{form.hidden_tag()}}
+  {{form.lower_wave.label()}}
+  {{form.lower_wave}} <br>
+  {% if form.lower_wave.errors %}
+          <div class="invalid-feedback">
+            {% for error in form.lower_wave.errors %}
+                <span>{{ error }}</span>
+            {% endfor %}
+          </div> 
+          <br><br>                               
+  {% endif %}
 
-  <section class="section-2" style="height: 92vh; width: 95 vw;">
+  {{form.upper_wave.label()}}
+  {{form.upper_wave}} <br>
+  {% if form.upper_wave.errors %}
+          <div class="invalid-feedback">
+            {% for error in form.upper_wave.errors %}
+                <span>{{ error }}</span>
+            {% endfor %}
+          </div>
+          <br><br>                                    
+  {% endif %}
+
+  {{form.baseline_intensity.label()}}
+  {{form.baseline_intensity}} <br>
+  {% if form.baseline_intensity.errors %}
+          <div class="invalid-feedback">
+            {% for error in form.baseline_intensity.errors %}
+                <span>{{ error }}</span>
+            {% endfor %}
+            </div>
+            <br><br>          
+  {% endif %}
+
+  <span class="anchor" id="s_section-3"></span>
     <div class="d-flex flex-column s2">
       <div class="p-0">
-        <form method=post enctype=multipart/form-data hidden>
-          <input type=file name=file id='file' onchange="drawChart()">
-
-          <!-- <input type=file name='Input Spectral Data' class="btn btn-lg section-2-btn" style="color: #000000 ;"> -->
-        </form>
-        <button id="file_input" onclick="clickHandler()" class="btn btn-lg section-2-btn" style="color: #000000 ;">Input
+        {{form.input_file(id = 'file',onchange="plotGraph()")}}
+        
+        <button type ="button" id="file_input" onclick="clickHandler()" 
+        class="btn btn-lg section-2-btn" style="color: #000000 ;">Input
           Spectral Data</button>
       </div>
       <div class="p-0">
-        <div class="graphc">
-          <div id="graphContainer"></div>
-        </div>
+        <div class="graphc"><div id="graphContainer"></div></div>
       </div>
       <div class="p-0">
-        <button class="btn btn-lg section-2-btn-next" style="color: #000000 ;">NEXT</button>
+        <button type= 'button' class="btn btn-lg section-2-btn-next" style="color: #000000 ;">NEXT</button>
       </div>
 
     </div>
   </section>
 
-  <span class="anchor" id="section-3"></span>
+  
   <section class="container">
     <h2>Element Selector</h2>
+    {{form.r_cutoff.label()}}
+    {{form.r_cutoff}} <br>
+    {% if form.r_cutoff.errors %}
+          <div class="invalid-feedback">
+            {% for error in form.r_cutoff.errors %}
+                <span>{{ error }}</span>
+            {% endfor %}
+          </div>
+          <br><br>             
+    {% endif %}
+
+    {{form.l_cutoff.label()}}
+    {{form.l_cutoff}} <br>
+    {% if form.l_cutoff.errors %}
+          <div class="invalid-feedback">
+            err
+            {% for error in form.l_cutoff.errors %}
+                <span>{{ error }}</span>
+            {% endfor %}
+          </div>
+          <br><br>   
+    {% endif %}
+
+    {{form.n_peaks.label()}}
+    {{form.n_peaks}} <br>
+    {% if form.n_peaks.errors %}
+          <div class="invalid-feedback">
+            {% for error in form.n_peaks.errors %}
+                <span>{{ error }}</span>
+            {% endfor %}
+          </div>
+          <br><br>                        
+    {% endif %}
+  
+    {{form.PS}}
+    {% if form.PS.errors %}
+          <div class="invalid-feedback">
+            {% for error in form.PS.errors %}
+                <span>{{ error }}</span>
+            {% endfor %}
+          </div>
+          <br><br>                        
+    {% endif %}
   </section>
 
   <section>
-    <div id="container"></div>
+    {{form.selected_elements.label}}
+    <br>
+    {{form.selected_elements()}}
   </section>
+  {{form.submit}}
+</form>
 </main>
-
 {% endblock content%}
+
 
 {% block JScript%}
 <script>
+  google.charts.load('current', { 'packages': ['corechart'] });
 
-  function clickHandler() {
-    document.getElementById('file').click()
-  }
-  let element = document.getElementById('file_input')
-</script>
-
-<script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
-<script type="module">
   function plotGraph() {
     const fileInput = document.getElementById('file');
     const file = fileInput.files[0];
@@ -93,53 +156,36 @@
             data.push(value);
           }
         }
-        // drawChart(data);
-        const x = d3.parse(data);
-        console.log(x);
+
+        drawChart(data);
       };
       reader.readAsText(file);
     }
   }
 
+  function drawChart(data) {
+    const chartData = new google.visualization.DataTable();
+    chartData.addColumn('number', 'Index');
+    chartData.addColumn('number', 'Value');
 
-function drawChart(){
-    const fileInput = document.getElementById('file');
-    const file = fileInput.files[0];
+    for (let i = 0; i < data.length; i++) {
+      chartData.addRow([i, data[i]]);
+    }
 
-  // Declare the chart dimensions and margins.
-  const width = 640;
-  const height = 400;
-  const marginTop = 20;
-  const marginRight = 20;
-  const marginBottom = 30;
-  const marginLeft = 40;
+    const options = {
+      title: 'Graph Data',
+      curveType: 'function',
+      legend: { position: 'bottom' },
+      'width':1600,
+      'height':500
+    };
 
-  // Declare the x (horizontal position) scale.
-  const x = d3.csvParse(file)
-  console.log(x)
-  // Declare the y (vertical position) scale.
-  // const y = d3.scaleLinear()
-  //   .domain([0, 100])
-  //   .range([height - marginBottom, marginTop]);
-
-  // // Create the SVG container.
-  // const svg = d3.create("svg")
-  //   .attr("width", width)
-  //   .attr("height", height);
-
-  // // Add the x-axis.
-  // svg.append("g")
-  //   .attr("transform", `translate(0,${height - marginBottom})`)
-  //   .call(d3.axisBottom(x));
-
-  // // Add the y-axis.
-  // svg.append("g")
-  //   .attr("transform", `translate(${marginLeft},0)`)
-  //   .call(d3.axisLeft(y));
-
-  // // Append the SVG element.
-  // container.append(svg.node());
-}
-
+    const chart = new google.visualization.LineChart(document.getElementById('graphContainer'));
+    chart.draw(chartData, options);
+  }
+  function clickHandler() {
+    document.getElementById('file').click()
+  }
+  let element = document.getElementById('file_input')
 </script>
 {% endblock JScript%}
