--- a/templates/results.html
+++ b/templates/results.html
@@ -1,11 +1,20 @@
 {% extends "layout.html" %}
 {% block content%}
-    <h1>Results</h1>
+    {% if user_data %}
 
-    {% if 'file_list' in session: %}
-        {{session['file_list']}}
-        {% for file in session['file_list'] %}
-            <span>{{file}}</span>
-        {% endfor %}
+        {% if user_data.rec_file %}
+            <h2> {{ user_data.rec_file}}</h2> <br>
+        {% endif %}
+        {% if user_data.file_list %}
+            {{ user_data.file_list}}
+            {% for file in user_data.file_list %}
+                <span>{{file}}</span><br>
+            {% endfor %}
+        {% endif %}
+        <br>
+        {% if user_data.log_data %}
+            {{ user_data.log_data}} <br>
+        {% endif %}
+
     {% endif %}
 {% endblock content%}
