--- a/templates/homed3old.html
+++ b/templates/homed3old.html
@@ -148,8 +148,29 @@
       const reader = new FileReader();
       reader.onload = function (event) {
         const content = event.target.result;
-        const data2 = d3.csvParse(content);
         // document.write(content)
+        const lines = content.split(/\r?\n/);
+        const data = [];
+        const x =[];
+        const y =[];
+        headings = lines[0];
+        //console.log(event.target.result);
+        // console.log(lines.length)
+        //console.log(lines[0])
+
+        for (let i = 1; i < (lines.length-1); i++) {  // Start from index 1 to skip header
+          const line = lines[i].split(',');
+          // console.log(line);
+          const rx = line[0];
+          const ry = line[1];
+          // console.log(rx,ry, i);
+          const v_x = parseFloat(rx);
+          const v_y = parseFloat(ry);
+          if (!isNaN(v_x) && !isNaN(v_y)) {
+            x.push(v_x);
+            y.push(v_y);
+          }
+        }
         drawChart(data,x,y);
         DrawChart2(lines, "test2")
       };
@@ -158,7 +179,7 @@
   }
 
   function drawChart(data,x,y) {
-    Plotly.newPlot("test", {
+    Plotly.newPlot("test", [x,y], {
 	margin: { t: 0 } } );
   }
   function clickHandler() {
