--- a/templates/layout.html
+++ b/templates/layout.html
@@ -48,7 +48,7 @@
           <ul class="navbar-nav ms-auto me-auto mb-2 mb-lg-0">
             <li class="nav-item pe-5"><a class="nav-link" href="{{ url_for('home') }}">HOME</a></li>
             <li class="nav-item pe-5"><a class="nav-link" href="{{ url_for('docs') }}">DOCS</a></li>
-            <li class="nav-item pe-5"><a class="nav-link" href="{{ url_for('docs') }}">GITHUB</a></li>
+            <li class="nav-item pe-5"><a class="nav-link" href="https://github.com/Bluejee/OpenLIBS">GITHUB</a></li>
             <li class="nav-item pe-5"><a class="nav-link" href="{{ url_for('about') }}">ABOUT</a></li>
           </ul>
         </div>
