--- a/static/main.css
+++ b/static/main.css
@@ -1,9 +1,31 @@
-.btn-green {
-    background-color: rgb(81, 223, 155);
+.btn-color {
+    background-color: rgb(152, 33, 118);
 }
 
 body {
     font-family: 'Roboto';
+}
+
+nav {
+    background-color: rgb(31, 40, 60);
+    color: white;
+}
+
+.nav-link {
+    color: wheat;
+    align-items: center;
+    
+    &:hover{
+        color: brown;
+        text-decoration: underline;
+        text-underline-offset: 6px;
+    }
+}
+
+.mynav-items{
+    align-self: flex-end;
+    justify-self: right;
+    margin-left: 40rem;
 }
 
 .favic {
@@ -11,16 +33,11 @@ body {
     height: 48px;
 }
 
-/* .mybg {
-    background-color: rgb(191, 237, 252);
-  } */
 
-
-.section-2{
-    width: 100vw;
-    height: 100vh;
+.section-2 {
     position: relative;
 }
+
 .section-2-btn {
     width: 12rem;
     height: 2rem;
@@ -48,7 +65,7 @@ body {
 }
 
 .section-2-btn-next {
-    
+
     margin-top: 0rem;
     margin-left: 50rem;
     border-radius: 5rem;
@@ -59,40 +76,33 @@ body {
     justify-content: center;
 }
 
-.graphContainer{
-    width:80rem;
+.graphContainer {
+    width: 80rem;
     height: 35rem;
     margin-left: 10%;
     margin-bottom: 0px;
     border-radius: 5rem;
-    width:100%; 
-    max-width:600px; 
-    height:500px;  
+    width: 100%;
+    max-width: 600px;
+    height: 500px;
 }
-/* style="width:100%; max-width:600px; height:500px;" */
-section5 {
-    background: rgb(5,9,44);
-    background: linear-gradient(45deg,rgba(6,77,143,1)  0%, rgba(6,47,99,1) 72%, rgba(5,9,44,1) 100%);
-}
-div[dir="ltr"] {
-    overflow: hidden;
-    }
 
-
-#form_file_input{
+#form_file_input {
     visibility: hidden;
     width: 0px;
     max-width: 0px;
     height: 0px;
     max-height: 0px;
 }
-#file{
+
+#file {
     visibility: hidden;
     width: 0px;
     max-width: 0px;
     height: 0px;
     max-height: 0px;
 }
+
 .periodic-table {
     display: grid;
     grid-template-columns: repeat(18, 1fr);
@@ -112,4 +122,43 @@ div[dir="ltr"] {
     height: 80px;
     padding: 5px;
     font-size: 14px;
+}
+
+section {
+    height: 100vh;
+    width: 100vw;
+    background: rgb(5, 9, 44);
+    background: url('/static/media/bgtrans.png'), linear-gradient(45deg, rgba(6, 77, 143, 1) 0%, rgba(6, 47, 99, 1) 72%, rgba(5, 9, 44, 1) 100%);
+    background-size: cover;
+    background-blend-mode: multiply;
+}
+#secion1{
+    height: 92vh;
+    width: 98.9vw;
+    background: rgb(5, 9, 44);
+    background: url('/static/media/bgtrans.png'), linear-gradient(45deg, rgba(6, 77, 143, 1) 0%, rgba(6, 47, 99, 1) 72%, rgba(5, 9, 44, 1) 100%);
+    background-size: cover;
+    background-blend-mode: multiply;
+}
+
+.startcite {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 10rem;
+
+    .start{
+        &:hover{
+            background-color: green;
+            border-radius: 10%;
+        }
+    }
+    .cite{
+        color: white;
+        border-color: aqua;
+        &:hover{
+            background-color: aqua;
+        }
+    }
 }
