--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,12 +17,6 @@
   {% else %}
   <title>OpenLIBS</title>
   {% endif %}
-  <style>
-    .main-section-1 {
-      background-image: url('{{ url_for('static', filename='/media/Cu02.jpg') }}');
-      background-size: 100% 100%;
-    }
-  </style>
 </head>
 
 <body>
@@ -36,16 +30,16 @@
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
   <header class="">
-    <nav class="navbar navbar-fixed-top navbar-expand-lg navbar-light" style="background-color: rgb(191, 237, 252)">
+    <nav class="navbar navbar-expand-lg navbar-fixed-top">
       <div class="container-fluid">
         <img class='favic' src="{{url_for('static', filename='/media/openlibsicon.svg')}}" alt="icon">
-        <a class="navbar-brand" href="{{ url_for('home') }}">openLIBS</a><h2>{{session['uid']}}</h2>
+        <a class="navbar-brand" style="color: wheat;" href="{{ url_for('home') }}">openLIBS</a><h2>{{session['uid']}}</h2>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse mybg-cyan" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto me-auto mb-2 mb-lg-0">
+        <div class="collapse navbar-collapse mynav-items" id="navbarSupportedContent">
+          <ul class="navbar-nav">
             <li class="nav-item pe-5"><a class="nav-link" href="{{ url_for('home') }}">HOME</a></li>
             <li class="nav-item pe-5"><a class="nav-link" href="{{ url_for('docs') }}">DOCS</a></li>
             <li class="nav-item pe-5"><a class="nav-link" href="https://github.com/Bluejee/OpenLIBS">GITHUB</a></li>
