--- a/templates/homed3.html
+++ b/templates/homed3.html
@@ -1,24 +1,18 @@
 {% extends "layout.html" %}
 {% block content%}
 <main class="mt-0 mb-0">
-  <section class="main-section-1" style="height: 92vh; width: 95 vw;">
+  <section class="main-section-1" id="secion1">
     <div class="pt-4">
       <h1 style="font-size:5vw" class="text-center text-light fw-bolder">LIBS ANALYZER</h1>
     </div>
-    <div class="mt-3">
-      <div class="d-flex  justify-content-evenly flex-row bd-highlight mb-3">
-
-        <div class="p-2 bd-highlight"><img width="300vw" height="300vw"
-            src="{{ url_for('static', filename='/media/Group11.jpg') }}" alt=""></div>
-        <div class="my-auto p-2 bd-highlight b"><a class="btn btn-lg btn-green fw-bold" href="#section-2">GET
+    <div class="startcite"> 
+        <div class="p-2"><a class="btn btn-lg btn-color fw-bold start" href="#section-2">GET
             STARTED</a></div>
-        <div class="p-2 bd-highlight" id="my_p1"><img width="300vw" height="300vw"
-            src="{{ url_for('static', filename='/media/Group12.jpg') }}" alt=""></div>
+        <div class="p-2"><a class="btn btn-sm cite" href="#">Cite Us!</a></div>
       </div>
-    </div>
   </section>
 
-<section id="section-2" class="section-2" style="height: 92vh; width: 95 vw;">
+<section id="section-2" class="section-2">
 <form action="/" method="POST" enctype=multipart/form-data >
   {{form.hidden_tag()}}
   {{form.lower_wave.label()}}
@@ -66,16 +60,17 @@
       <div class="p-0">
         <div class="graphc"><div id="graphContainer"></div></div>
       </div>
+      <div id="test"></div>
       <div class="p-0">
         <button type= 'button' class="btn btn-lg section-2-btn-next" style="color: #000000 ;">NEXT</button>
       </div>
-
+        
     </div>
   </section>
 
   
-  <section class="container">
-    <h2>Element Selector</h2>
+  <section class="section-2" id = "section-2">
+    
     {{form.r_cutoff.label()}}
     {{form.r_cutoff}} <br>
     {% if form.r_cutoff.errors %}
@@ -110,7 +105,7 @@
           <br><br>                        
     {% endif %}
   
-    {{form.PS}}
+    <span>Search for Persistant</span> {{form.PS}}
     {% if form.PS.errors %}
           <div class="invalid-feedback">
             {% for error in form.PS.errors %}
@@ -121,15 +116,38 @@
     {% endif %}
   </section>
 
-  <section>
+  <section class="section-3" id = "section-3">
+
+    <h2>Element Selector</h2>
+    <div class="periodic-table">
+    <div class="periodic-table-main">
+      <!-- Generate the select options using Flask-WTF -->
+      {% for field in form.selected_elements %}
+        {% if (loop.index in range(1,58)) or (loop.index in range(72,90)) or (loop.index in range(104,119) )%}
+          <div class="element main {{ 'selected' if field.data }} " data-symbol="{{ field.label.text }} " data-id="{{ loop.index }}">{{ field }}</div>
+        {% endif %}
+        {% endfor %}
+        <div class="passive-periodic">
+        {% for field in form.selected_elements %}
+        {% if (loop.index in range(58,72)) or (loop.index in range(90,104))%}
+          <div class="element {{ 'selected' if field.data }} {{ 'act' if loop.index in range(90,104) else 'lanth' }}" data-symbol="{{ field.label.text }} " data-id="{{ loop.index }}">{{ field }}</div>
+        {% endif %}
+      {% endfor %}
+    </div>
+    </div>
+  </div>
+  <div id="form-select-elements" hidden>
     {{form.selected_elements.label}}
     <br>
-    {{form.selected_elements()}}
+    {{form.selected_elements(id = "form-elements")}}
+    <br>
+  </div>
+    <br>
+    <br>
+    {{form.submit(class='submit-btn')}}
   </section>
-  {{form.submit}}
+  
 </form>
-<section id="test"></section>
-<section id="test2"></section>
 </main>
 {% endblock content%}
 
@@ -144,4 +162,33 @@
   let element = document.getElementById('file_input')
 </script>
 <script src="{{url_for('static', filename='plot.js')}}"></script>
+<script>
+  const elements = document.querySelectorAll('.element');
+ 
+
+  elements.forEach(element => {
+    element.addEventListener('click', () => {
+      element.classList.toggle('selected');
+      console.log(document.getElementById("form-elements").options);
+
+
+      var optionsToSelect = element.innerHTML;
+      var select = document.getElementById( 'form-elements' );
+
+      for ( var i = 0, l = select.options.length; i < l; i++ ){
+        o = select.options[i];
+        if ( optionsToSelect.indexOf( o.text ) != -1 ){
+          if (o.selected){
+            o.selected = false;
+            break
+          }
+          o.selected= true;
+          break;
+        }
+      }
+    });
+  });
+
+</script>
+
 {% endblock JScript%}
