--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='main.css')}}">
-  <link rel="shortcut icon" href="{{ url_for('static', filename='/media/openlibsicon.svg') }}">
+  <link rel="shortcut icon" href="{{ url_for('static', filename='/media/libslogo.svg') }}">
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 
 
@@ -32,8 +32,8 @@
   <header class="">
     <nav class="navbar navbar-expand-lg navbar-fixed-top">
       <div class="container-fluid">
-        <img class='favic' src="{{url_for('static', filename='/media/openlibsicon.svg')}}" alt="icon">
-        <a class="navbar-brand" style="color: wheat;" href="{{ url_for('home') }}">openLIBS</a><h2>{{session['uid']}}</h2>
+        <img class='favic' src="{{url_for('static', filename='/media/libslogo.svg')}}" alt="icon">
+        <a class="navbar-brand" href="{{ url_for('home') }}">openLIBS</a><h2>{{session['uid']}}</h2>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
