Integrated the plotting function into the server sider routes and enabled downloads for the all files(including html output)

--- a/templates/results.html
+++ b/templates/results.html
@@ -2,6 +2,7 @@
 {% block content%}
     {% if output %}
         <a href="/download"><button class='btn btn-info'>Download</button></a> <br>
+        {{ output.plotly_div | safe}}
     {% endif %}
 {% endblock content%}
 
